--- a/index.html
+++ b/index.html
@@ -18,7 +18,6 @@
     <body>
       <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
         <div class="container">
-          <img src="LOGO.png" width="150px" height="150px" />
           <a class="navbar-brand" href="index.html" title="Home page"
             >SSB PHOTOGRAPHY</a
           >
@@ -73,23 +72,20 @@
         </div>
       </nav>
 
-      <img src="LOGO.png" width="150px" height="150px" />
-      <h1>SSB PHOTOGRAPHY</h1>
       <p>WELCOME TO SSB PHOTOGRAPHY HOME PAGE</p>
-
-      <ul class="nav nav-pills nav-justified">
-        <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="gallery.html"
-            >GALLERY</a
-          >
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="aboutUs.html">ABOUT US</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="contactUs.html">CONTACT US</a>
-        </li>
-      </ul>
+      <img
+        src="LOGO.png"
+        alt="Brand logo"
+        width="150px"
+        height="150px"
+        class="logoSSB"
+      />
+      <br />
+      <img
+        src="IMG_20170910_143715.jpg"
+        alt="background Picture"
+        class="bgPic"
+      />
     </body>
   </head>
 </html>
