Added pictures to the gallery page

--- a/contactUs.html
+++ b/contactUs.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	 <link
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl"
@@ -16,78 +16,77 @@
     ></script>
 
     <link rel="stylesheet" type="text/css" href="styles.css" />
-	<title>CONTACT US</title>
-</head>
-<body>
-	 <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
-        <div class="container">
-          <a class="navbar-brand" href="index.html" title="Home page"
-            >SSB PHOTOGRAPHY</a
-          >
-          <button
-            class="navbar-toggler"
-            type="button"
-            data-bs-toggle="collapse"
-            data-bs-target="#navbarNav"
-            aria-controls="navbarNav"
-            aria-expanded="false"
-            aria-label="Toggle navigation"
-          >
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
-              <li class="nav-item">
-                <a
-                  class="nav-link active"
-                  aria-current="page"
-                  href="index.html"
-                  title="Home page"
-                  >Home</a
-                >
-              </li>
-              <li class="nav-item">
-                <a
-                  class="nav-link"
-                  href="aboutUs.html"
-                  title="About the developer"
-                  >About Us</a
-                >
-              </li>
-              <li class="nav-item">
-                <a
-                  class="nav-link"
-                  href="gallery.html"
-                  title="Developers contact details"
-                  >Gallery</a
-                >
-              </li>
-              <li class="nav-item">
-                <a
-                  class="nav-link"
-                  href="contactUs.html"
-                  title="Developers contact details"
-                  >Contact me</a
-                >
-              </li>
-            </ul>
-          </div>
+    <title>CONTACT US</title>
+  </head>
+  <body>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
+      <div class="container">
+        <a class="navbar-brand" href="index.html" title="Home page"
+          >SSB PHOTOGRAPHY</a
+        >
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarNav"
+          aria-controls="navbarNav"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a
+                class="nav-link active"
+                aria-current="page"
+                href="index.html"
+                title="Home page"
+                >Home</a
+              >
+            </li>
+            <li class="nav-item">
+              <a
+                class="nav-link"
+                href="aboutUs.html"
+                title="About the developer"
+                >About Us</a
+              >
+            </li>
+            <li class="nav-item">
+              <a
+                class="nav-link"
+                href="gallery.html"
+                title="Developers contact details"
+                >Gallery</a
+              >
+            </li>
+            <li class="nav-item">
+              <a
+                class="nav-link"
+                href="contactUs.html"
+                title="Developers contact details"
+                >Contact me</a
+              >
+            </li>
+          </ul>
         </div>
-      </nav>
-	<img src="LOGO.png" width="150px" height="150px" align-content="center" >
+      </div>
+    </nav>
+    <img
+      src="LOGO.png"
+      alt="Brand logo"
+      width="150px"
+      height="150px"
+      class="logoSSB"
+    />
 
-
-	<h1> SSB PHOTOGRAPHY </h1>
-	
- </a>
- <p> Contact SSB Photography for your next event.</p><br>
- <p> Contact Number: 084 610 5908</p><br>
- <p> Email us on photographyssb95@gmail.com</p><br>
- <img src="FACEBOOK.png" width="200" height="75"> <br>
- <img src="INSTAGRAM.png" width="200" height="75"> <br>
-
-<a href="SSB PHOTOGRAPHY.html">
- 	HOME PAGE
-
-</body>
+    <p>Contact SSB Photography for your next event.</p>
+    <br />
+    <p>Contact Number: 084 610 5908</p>
+    <br />
+    <p>Email us on photographyssb95@gmail.com</p>
+    <br />
+  </body>
 </html>
