--- a/index.html
+++ b/index.html
@@ -72,7 +72,6 @@
         </div>
       </nav>
 
-      <p>WELCOME TO SSB PHOTOGRAPHY HOME PAGE</p>
       <img
         src="LOGO.png"
         alt="Brand logo"
@@ -80,6 +79,8 @@
         height="150px"
         class="logoSSB"
       />
+      <br />
+      <h1>WELCOME TO SSB PHOTOGRAPHY <br />HOME PAGE</h1>
       <br />
       <img
         src="IMG_20170910_143715.jpg"
