--- a/aboutUs.html
+++ b/aboutUs.html
@@ -74,11 +74,14 @@
         </div>
       </div>
     </nav>
-    <img src="LOGO.png" width="150px" height="150px" align-content="center" />
-
-    <h1>SSB PHOTOGRAPHY</h1>
+    <img
+      src="LOGO.png"
+      alt="Brand logo"
+      width="150px"
+      height="150px"
+      class="logoSSB"
+    />
 
     <p>This page is about our history.</p>
-    <a href="SSB PHOTOGRAPHY.html"> HOME PAGE </a>
   </body>
 </html>
