Added designer's name

--- a/aboutUs.html
+++ b/aboutUs.html
@@ -82,6 +82,8 @@
       class="logoSSB"
     />
 
-    <p>This page is about our history.</p>
+    <h1>This page is about our history.</h1>
+
+    <p>Designed by Sush Budhayee</p>
   </body>
 </html>
