--- a/contactUs.html
+++ b/contactUs.html
@@ -88,5 +88,7 @@
     <br />
     <p>Email us on photographyssb95@gmail.com</p>
     <br />
+
+    <p>Designed by Sush Budhayee</p>
   </body>
 </html>
