--- a/index.html
+++ b/index.html
@@ -87,6 +87,8 @@
         alt="background Picture"
         class="bgPic"
       />
+      <br />
+      <p>Designed by Sush Budhayee</p>
     </body>
   </head>
 </html>
