--- a/index.html
+++ b/index.html
@@ -88,6 +88,12 @@
         class="bgPic"
       />
       <br />
+
+      <h3>
+        Follow us on
+        <i class="fa-brands fa-square-facebook"> <a href="#"></a></i>
+        <i class="fa-brands fa-square-instagram"><a href="#"></a></i>
+      </h3>
       <p>Designed by Sush Budhayee</p>
     </body>
   </head>
