--- a/GALLERY.html
+++ b/GALLERY.html
@@ -88,6 +88,18 @@
         <div class="col-6">
           <img src="" width="" height="" />
         </div>
+        <div class="col-6">
+          <img src="" width="" height="" />
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-6">
+          <img src="" width="" height="" />
+        </div>
+        <div class="col-6">
+          <img src="" width="" height="" />
+        </div>
       </div>
     </div>
 
