--- a/photoshootPg.html
+++ b/photoshootPg.html
@@ -15,8 +15,8 @@
       crossorigin="anonymous"
     ></script>
 
-    <link rel="stylesheet" type="text/css" href="gallerystyle.css" />
-    <title>Gallery</title>
+    <link rel="stylesheet" type="text/css" href="styles.css" />
+    <title>Photos - Photoshoots</title>
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
@@ -74,7 +74,6 @@
         </div>
       </div>
     </nav>
-
     <img
       src="LOGO.png"
       alt="Brand logo"
@@ -82,34 +81,6 @@
       height="150px"
       class="logoSSB"
     />
-
-    <div class="container">
-      <div class="row">
-        <div class="col-6">
-          <a href="eventsPg.html" title=""
-            ><img src="pic/EVENTS/006.jpg" width="675" height="400"
-          /></a>
-        </div>
-        <div class="col-6">
-          <a href="guruPg.html" title=""
-            ><img src="pic/GURU JI/008.JPG" width="675" height="400"
-          /></a>
-        </div>
-      </div>
-
-      <div class="row">
-        <div class="col-6">
-          <a href="naturePg.html" title=""
-            ><img src="pic/NATURE/001.jpg" width="675" height="400"
-          /></a>
-        </div>
-        <div class="col-6">
-          <a href="photoshootPg.html" title=""
-            ><img src="pic/PHOTOSHOOTS/0116.jpg" width="675" height="400"
-          /></a>
-        </div>
-      </div>
-    </div>
 
     <p>Designed by Sush Budhayee</p>
   </body>
