--- a/GALLERY.html
+++ b/GALLERY.html
@@ -86,26 +86,42 @@
     <div class="container">
       <div class="row">
         <div class="col-6">
-          <a href="eventsPg.html" title=""
-            ><img src="pic/EVENTS/006.jpg" width="675" height="400"
+          <a href="eventsPg.html" title="Events link"
+            ><img
+              src="pic/EVENTS/006.jpg"
+              width="675"
+              height="400"
+              class="pageLink"
           /></a>
         </div>
         <div class="col-6">
-          <a href="guruPg.html" title=""
-            ><img src="pic/GURU JI/008.JPG" width="675" height="400"
+          <a href="guruPg.html" title="Guru Ji link"
+            ><img
+              src="pic/GURU JI/008.JPG"
+              width="675"
+              height="400"
+              class="pageLink"
           /></a>
         </div>
       </div>
 
       <div class="row">
         <div class="col-6">
-          <a href="naturePg.html" title=""
-            ><img src="pic/NATURE/001.jpg" width="675" height="400"
+          <a href="naturePg.html" title="Nature link"
+            ><img
+              src="pic/NATURE/001.jpg"
+              width="675"
+              height="400"
+              class="pageLink"
           /></a>
         </div>
         <div class="col-6">
-          <a href="photoshootPg.html" title=""
-            ><img src="pic/PHOTOSHOOTS/0116.jpg" width="675" height="400"
+          <a href="photoshootPg.html" title="Photoshoot link"
+            ><img
+              src="pic/PHOTOSHOOTS/0116.jpg"
+              width="675"
+              height="400"
+              class="pageLink"
           /></a>
         </div>
       </div>
