Added social media links

--- a/GALLERY.html
+++ b/GALLERY.html
@@ -86,47 +86,57 @@
     <div class="container">
       <div class="row">
         <div class="col-6">
-          <a href="eventsPg.html" title="Events link"
-            ><img
-              src="pic/EVENTS/006.jpg"
-              width="675"
-              height="400"
-              class="pageLink"
-          /></a>
+          <img
+            src="pic/EVENTS/006.jpg"
+            width="675"
+            height="400"
+            class="pageLink"
+          />
         </div>
         <div class="col-6">
-          <a href="guruPg.html" title="Guru Ji link"
-            ><img
-              src="pic/GURU JI/008.JPG"
-              width="675"
-              height="400"
-              class="pageLink"
-          /></a>
+          <img
+            src="pic/GURU JI/008.JPG"
+            width="675"
+            height="400"
+            class="pageLink"
+          />
         </div>
       </div>
 
       <div class="row">
         <div class="col-6">
-          <a href="naturePg.html" title="Nature link"
-            ><img
-              src="pic/NATURE/001.jpg"
-              width="675"
-              height="400"
-              class="pageLink"
-          /></a>
+          <img
+            src="pic/NATURE/001.jpg"
+            width="675"
+            height="400"
+            class="pageLink"
+          />
         </div>
         <div class="col-6">
-          <a href="photoshootPg.html" title="Photoshoot link"
-            ><img
-              src="pic/PHOTOSHOOTS/0116.jpg"
-              width="675"
-              height="400"
-              class="pageLink"
-          /></a>
+          <img
+            src="pic/PHOTOSHOOTS/0116.jpg"
+            width="675"
+            height="400"
+            class="pageLink"
+          />
         </div>
       </div>
     </div>
 
+    <h3>Follow us on</h3>
+    <span>
+      <a
+        href="https://www.facebook.com/photographyssb95?mibextid=ZbWKwL"
+        title="Facebook page link"
+        ><img src="FACEBOOK.png" width="120" height="60" class="pageLink"
+      /></a>
+
+      <a
+        href="https://instagram.com/photographyssb95?utm_source=qr&igshid=MzNlNGNkZWQ4Mg%3D%3D"
+        title="Nature link"
+        ><img src="INSTAGRAM.png" width="120" height="60" class="pageLink"
+      /></a>
+    </span>
     <p>Designed by Sush Budhayee</p>
   </body>
 </html>
