--- a/aboutUs.html
+++ b/aboutUs.html
@@ -84,6 +84,20 @@
 
     <h1>This page is about our history.</h1>
 
+    <h3>Follow us on</h3>
+    <span>
+      <a
+        href="https://www.facebook.com/photographyssb95?mibextid=ZbWKwL"
+        title="Facebook page link"
+        ><img src="FACEBOOK.png" width="120" height="60" class="pageLink"
+      /></a>
+
+      <a
+        href="https://instagram.com/photographyssb95?utm_source=qr&igshid=MzNlNGNkZWQ4Mg%3D%3D"
+        title="Nature link"
+        ><img src="INSTAGRAM.png" width="120" height="60" class="pageLink"
+      /></a>
+    </span>
     <p>Designed by Sush Budhayee</p>
   </body>
 </html>
