--- a/contactUs.html
+++ b/contactUs.html
@@ -84,11 +84,24 @@
 
     <p>Contact SSB Photography for your next event.</p>
     <br />
-    <p>Contact Number: 084 610 5908</p>
+    <p>Contact Number: 063 421 2770</p>
     <br />
     <p>Email us on photographyssb95@gmail.com</p>
     <br />
+    <h3>Follow us on</h3>
+    <span>
+      <a
+        href="https://www.facebook.com/photographyssb95?mibextid=ZbWKwL"
+        title="Facebook page link"
+        ><img src="FACEBOOK.png" width="120" height="60" class="pageLink"
+      /></a>
 
+      <a
+        href="https://instagram.com/photographyssb95?utm_source=qr&igshid=MzNlNGNkZWQ4Mg%3D%3D"
+        title="Nature link"
+        ><img src="INSTAGRAM.png" width="120" height="60" class="pageLink"
+      /></a>
+    </span>
     <p>Designed by Sush Budhayee</p>
   </body>
 </html>
