--- a/GALLERY.html
+++ b/GALLERY.html
@@ -128,13 +128,13 @@
       <a
         href="https://www.facebook.com/photographyssb95?mibextid=ZbWKwL"
         title="Facebook page link"
-        ><img src="FACEBOOK.png" width="120" height="60" class="pageLink"
+        ><img src="FACEBOOK.png" width="120" height="60"
       /></a>
 
       <a
         href="https://instagram.com/photographyssb95?utm_source=qr&igshid=MzNlNGNkZWQ4Mg%3D%3D"
         title="Nature link"
-        ><img src="INSTAGRAM.png" width="120" height="60" class="pageLink"
+        ><img src="INSTAGRAM.png" width="120" height="60"
       /></a>
     </span>
     <p>Designed by Sush Budhayee</p>
