--- a/GALLERY.html
+++ b/GALLERY.html
@@ -95,7 +95,7 @@
         </div>
         <div class="col-6">
           <img
-            src="pic/GURU JI/008.JPG"
+            src="pic/GURU JI/0109.JPG"
             width="675"
             height="400"
             class="pageLink"
@@ -115,6 +115,25 @@
         <div class="col-6">
           <img
             src="pic/PHOTOSHOOTS/0116.jpg"
+            width="675"
+            height="400"
+            class="pageLink"
+          />
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-6">
+          <img
+            src="pic/EVENTS/0145.JPG"
+            width="675"
+            height="400"
+            class="pageLink"
+          />
+        </div>
+        <div class="col-6">
+          <img
+            src="pic/NATURE/080.JPG"
             width="675"
             height="400"
             class="pageLink"
