Updated gallery HTML & CSS

--- a/GALLERY.html
+++ b/GALLERY.html
@@ -85,7 +85,7 @@
 
     <div class="container">
       <div class="row">
-        <div class="col-6">
+        <div class="col-12">
           <img
             src="pic/EVENTS/006.jpg"
             width="675"
@@ -93,7 +93,9 @@
             class="pageLink"
           />
         </div>
-        <div class="col-6">
+      </div>
+      <div class="row">
+        <div class="col-12">
           <img
             src="pic/GURU JI/0109.JPG"
             width="675"
@@ -104,7 +106,7 @@
       </div>
 
       <div class="row">
-        <div class="col-6">
+        <div class="col-12">
           <img
             src="pic/NATURE/001.jpg"
             width="675"
@@ -112,7 +114,10 @@
             class="pageLink"
           />
         </div>
-        <div class="col-6">
+      </div>
+
+      <div class="row">
+        <div class="col-12">
           <img
             src="pic/PHOTOSHOOTS/0116.jpg"
             width="675"
@@ -123,7 +128,7 @@
       </div>
 
       <div class="row">
-        <div class="col-6">
+        <div class="col-12">
           <img
             src="pic/EVENTS/0145.JPG"
             width="675"
@@ -131,7 +136,9 @@
             class="pageLink"
           />
         </div>
-        <div class="col-6">
+      </div>
+      <div class="row">
+        <div class="col-12">
           <img
             src="pic/NATURE/080.JPG"
             width="675"
