--- a/aboutUs.html
+++ b/aboutUs.html
@@ -84,17 +84,25 @@
 
     <h1>This page is about our history.</h1>
     <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
+    <p>
+      <em>SSB Photography</em> was established in 2016 by the owner Sushmitha S.
+      Budhayee. <br />
+      We capture moments, not pictures. We have packages which are affordable
+      and <br />
+      tailor made to suite your budget.
+
+      <br />
+      <br />
+      <br />
+
+      Sushmitha started as a freelancer. She worked in various industries
+      gaining <br />
+      experience and been exposed to the different types of photography. Having
+      that <br />
+      passion within her; she took a leap of faith and went solo into the
+      photography <br />
+      industry. No event or photoshoot is too small for her.
+    </p>
 
     <h3>Follow us on</h3>
     <span>
