--- a/aboutUs.html
+++ b/aboutUs.html
@@ -82,7 +82,7 @@
       class="logoSSB"
     />
 
-    <h1>This page is about our history.</h1>
+    <h1>About our history.</h1>
     <br />
     <h2>
       <em>SSB Photography</em> was established in 2016 by the owner Sushmitha S.
