--- a/aboutUs.html
+++ b/aboutUs.html
@@ -104,6 +104,17 @@
       industry. No event or photoshoot is too small for her.
     </h2>
 
+    <div class="container">
+      <div class="row">
+        <div class="col-5">
+          <img src="founder.jpeg" alt="Founder Picture" />
+        </div>
+        <div class="col-7">
+          <h1>Sushmitha S Budhayee (Sush)</h1>
+        </div>
+      </div>
+    </div>
+
     <h3>Follow us on</h3>
     <span>
       <a
