Updated founder info

--- a/aboutUs.html
+++ b/aboutUs.html
@@ -104,18 +104,17 @@
       industry. No event or photoshoot is too small for her.
     </h2>
 
-    <div class="container">
-      <div class="row">
-        <div class="col-5">
-          <img src="founder.jpeg" alt="Founder Picture" />
-        </div>
-        <div class="col-7">
-          <h1>Sushmitha S Budhayee (Sush)</h1>
-        </div>
-      </div>
-    </div>
+    <img
+      src="founder.jpeg"
+      alt="Founder Picture"
+      width="300px"
+      height="400px"
+      class="founderPic"
+    />
 
-    <h3>Follow us on</h3>
+    <h3 class="mt-1 text-center">Sushmitha S Budhayee (Sush)</h3>
+
+    <h3 class="mt-5">Follow us on</h3>
     <span>
       <a
         href="https://www.facebook.com/photographyssb95?mibextid=ZbWKwL"
