--- a/GALLERY.html
+++ b/GALLERY.html
@@ -80,7 +80,7 @@
       alt="Brand logo"
       width="150px"
       height="150px"
-      class="logoSSB"
+      class="img-fluid logoSSB"
     />
 
     <div class="container">
@@ -90,7 +90,7 @@
             src="pic/EVENTS/006.jpg"
             width="675"
             height="400"
-            class="pageLink"
+            class="img-fluid pageLink"
           />
         </div>
       </div>
@@ -100,7 +100,7 @@
             src="pic/GURU JI/0109.JPG"
             width="675"
             height="400"
-            class="pageLink"
+            class="img-fluid pageLink"
           />
         </div>
       </div>
@@ -111,7 +111,7 @@
             src="pic/NATURE/001.jpg"
             width="675"
             height="400"
-            class="pageLink"
+            class="img-fluid pageLink"
           />
         </div>
       </div>
@@ -122,7 +122,7 @@
             src="pic/PHOTOSHOOTS/0116.jpg"
             width="675"
             height="400"
-            class="pageLink"
+            class="img-fluid pageLink"
           />
         </div>
       </div>
@@ -133,7 +133,7 @@
             src="pic/EVENTS/0145.JPG"
             width="675"
             height="400"
-            class="pageLink"
+            class="img-fluid pageLink"
           />
         </div>
       </div>
@@ -143,7 +143,7 @@
             src="pic/NATURE/080.JPG"
             width="675"
             height="400"
-            class="pageLink"
+            class="img-fluid pageLink"
           />
         </div>
       </div>
@@ -157,13 +157,13 @@
       <a
         href="https://www.facebook.com/photographyssb95?mibextid=ZbWKwL"
         title="Facebook page link"
-        ><img src="FACEBOOK.png" width="120" height="60"
+        ><img src="FACEBOOK.png" width="120" height="60" class="img-fluid"
       /></a>
 
       <a
         href="https://instagram.com/photographyssb95?utm_source=qr&igshid=MzNlNGNkZWQ4Mg%3D%3D"
         title="Nature link"
-        ><img src="INSTAGRAM.png" width="120" height="60"
+        ><img src="INSTAGRAM.png" width="120" height="60" class="img-fluid"
       /></a>
     </span>
     <p>Designed by Sush Budhayee</p>
