--- a/aboutUs.html
+++ b/aboutUs.html
@@ -79,7 +79,7 @@
       alt="Brand logo"
       width="150px"
       height="150px"
-      class="logoSSB"
+      class="img-fluid logoSSB"
     />
 
     <h1>About our history.</h1>
@@ -109,7 +109,7 @@
       alt="Founder Picture"
       width="300px"
       height="400px"
-      class="founderPic"
+      class="img-fluid founderPic"
     />
 
     <h3 class="mt-1 text-center">Sushmitha S Budhayee (Sush)</h3>
@@ -119,13 +119,21 @@
       <a
         href="https://www.facebook.com/photographyssb95?mibextid=ZbWKwL"
         title="Facebook page link"
-        ><img src="FACEBOOK.png" width="120" height="60" class="pageLink"
+        ><img
+          src="FACEBOOK.png"
+          width="120"
+          height="60"
+          class="img-fluid pageLink"
       /></a>
 
       <a
         href="https://instagram.com/photographyssb95?utm_source=qr&igshid=MzNlNGNkZWQ4Mg%3D%3D"
         title="Nature link"
-        ><img src="INSTAGRAM.png" width="120" height="60" class="pageLink"
+        ><img
+          src="INSTAGRAM.png"
+          width="120"
+          height="60"
+          class="img-fluid pageLink"
       /></a>
     </span>
     <p>Designed by Sush Budhayee</p>
