--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         alt="Brand logo"
         width="150px"
         height="150px"
-        class="logoSSB"
+        class="img-fluid logoSSB"
       />
       <br />
       <h1>WELCOME TO SSB PHOTOGRAPHY <br />HOME PAGE</h1>
@@ -85,7 +85,7 @@
       <img
         src="IMG_20170910_143715.jpg"
         alt="background Picture"
-        class="bgPic"
+        class="img-fluid bgPic"
       />
       <br />
 
@@ -94,13 +94,13 @@
         <a
           href="https://www.facebook.com/photographyssb95?mibextid=ZbWKwL"
           title="Facebook page link"
-          ><img src="FACEBOOK.png" width="120" height="60" class="pageLink"
+          ><img src="FACEBOOK.png" width="120" height="60" class="img-fluid"
         /></a>
 
         <a
           href="https://instagram.com/photographyssb95?utm_source=qr&igshid=MzNlNGNkZWQ4Mg%3D%3D"
           title="Nature link"
-          ><img src="INSTAGRAM.png" width="120" height="60" class="pageLink"
+          ><img src="INSTAGRAM.png" width="120" height="60" class="img-fluid"
         /></a>
       </span>
 
