--- a/contactUs.html
+++ b/contactUs.html
@@ -79,7 +79,7 @@
       alt="Brand logo"
       width="150px"
       height="150px"
-      class="logoSSB"
+      class="img-fluid logoSSB"
     />
 
     <p>Contact SSB Photography for your next event.</p>
@@ -93,13 +93,21 @@
       <a
         href="https://www.facebook.com/photographyssb95?mibextid=ZbWKwL"
         title="Facebook page link"
-        ><img src="FACEBOOK.png" width="120" height="60" class="pageLink"
+        ><img
+          src="FACEBOOK.png"
+          width="120"
+          height="60"
+          class="img-fluid pageLink"
       /></a>
 
       <a
         href="https://instagram.com/photographyssb95?utm_source=qr&igshid=MzNlNGNkZWQ4Mg%3D%3D"
         title="Nature link"
-        ><img src="INSTAGRAM.png" width="120" height="60" class="pageLink"
+        ><img
+          src="INSTAGRAM.png"
+          width="120"
+          height="60"
+          class="img-fluid pageLink"
       /></a>
     </span>
     <p>Designed by Sush Budhayee</p>
