Added target blank

--- a/GALLERY.html
+++ b/GALLERY.html
@@ -157,12 +157,14 @@
       <a
         href="https://www.facebook.com/photographyssb95?mibextid=ZbWKwL"
         title="Facebook page link"
+        target="_blank"
         ><img src="FACEBOOK.png" width="120" height="60" class="img-fluid"
       /></a>
 
       <a
         href="https://instagram.com/photographyssb95?utm_source=qr&igshid=MzNlNGNkZWQ4Mg%3D%3D"
-        title="Nature link"
+        title="Instagram page link"
+        target="_blank"
         ><img src="INSTAGRAM.png" width="120" height="60" class="img-fluid"
       /></a>
     </span>
