--- a/aboutUs.html
+++ b/aboutUs.html
@@ -119,6 +119,7 @@
       <a
         href="https://www.facebook.com/photographyssb95?mibextid=ZbWKwL"
         title="Facebook page link"
+        target="_blank"
         ><img
           src="FACEBOOK.png"
           width="120"
@@ -128,7 +129,8 @@
 
       <a
         href="https://instagram.com/photographyssb95?utm_source=qr&igshid=MzNlNGNkZWQ4Mg%3D%3D"
-        title="Nature link"
+        title="Instagram page link"
+        target="_blank"
         ><img
           src="INSTAGRAM.png"
           width="120"
