Updated designer credits

--- a/GALLERY.html
+++ b/GALLERY.html
@@ -168,6 +168,6 @@
         ><img src="INSTAGRAM.png" width="120" height="60" class="img-fluid"
       /></a>
     </span>
-    <p>Designed by Sush Budhayee</p>
+    <p>Done by Shiv-Shakti Designs</p>
   </body>
 </html>
