--- a/contactUs.html
+++ b/contactUs.html
@@ -112,6 +112,6 @@
           class="img-fluid pageLink"
       /></a>
     </span>
-    <p>Designed by Sush Budhayee</p>
+    <p>Done by Shiv-Shakti Designs</p>
   </body>
 </html>
