--- a/aboutUs.html
+++ b/aboutUs.html
@@ -138,6 +138,6 @@
           class="img-fluid pageLink"
       /></a>
     </span>
-    <p>Designed by Sush Budhayee</p>
+    <p>Done by Shiv-Shakti Designs</p>
   </body>
 </html>
