--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
         /></a>
       </span>
 
-      <p>Designed by Sush Budhayee</p>
+      <p>Done by Shiv-Shakti Designs</p>
     </body>
   </head>
 </html>
