--- a/GALLERY.html
+++ b/GALLERY.html
@@ -81,19 +81,10 @@
       width="150px"
       height="150px"
       class="img-fluid logoSSB"
+      title="Branding"
     />
 
     <div class="container">
-      <div class="row">
-        <div class="col-12">
-          <img
-            src="pic/EVENTS/006.jpg"
-            width="675"
-            height="400"
-            class="img-fluid pageLink"
-          />
-        </div>
-      </div>
       <div class="row">
         <div class="col-12">
           <img
@@ -101,6 +92,18 @@
             width="675"
             height="400"
             class="img-fluid pageLink"
+            title="Image captured  of Guru Ji Rajeshanandha during the 2019 Guru Purnima programme."
+          />
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-12">
+          <img
+            src="pic/EVENTS/006.jpg"
+            width="675"
+            height="400"
+            class="img-fluid pageLink"
+            title="Image captured from an engagement ceremony"
           />
         </div>
       </div>
@@ -112,6 +115,7 @@
             width="675"
             height="400"
             class="img-fluid pageLink"
+            title="Image captured during a tour in Mauritius"
           />
         </div>
       </div>
@@ -123,6 +127,7 @@
             width="675"
             height="400"
             class="img-fluid pageLink"
+            title="Image captured  during a photoshoot at Mehtab Bagh in Agra."
           />
         </div>
       </div>
@@ -134,6 +139,7 @@
             width="675"
             height="400"
             class="img-fluid pageLink"
+            title="Image captured  during an interview with Anup Jalota on Hindvani"
           />
         </div>
       </div>
@@ -144,6 +150,7 @@
             width="675"
             height="400"
             class="img-fluid pageLink"
+            title="Image captured during a hike in Drakensberg"
           />
         </div>
       </div>
@@ -168,6 +175,6 @@
         ><img src="INSTAGRAM.png" width="120" height="60" class="img-fluid"
       /></a>
     </span>
-    <p>Done by Shiv-Shakti Designs</p>
+    <p title="Designer's name">Done by Shiv-Shakti Designs</p>
   </body>
 </html>
