--- a/contactUs.html
+++ b/contactUs.html
@@ -80,13 +80,14 @@
       width="150px"
       height="150px"
       class="img-fluid logoSSB"
+      title="Branding"
     />
 
     <p>Contact SSB Photography for your next event.</p>
     <br />
-    <p>Contact Number: 063 421 2770</p>
+    <p title="contact number">Contact Number: 063 421 2770</p>
     <br />
-    <p>Email us on photographyssb95@gmail.com</p>
+    <p title="email address">Email us on photographyssb95@gmail.com</p>
     <br />
     <h3>Follow us on</h3>
     <span>
@@ -112,6 +113,6 @@
           class="img-fluid pageLink"
       /></a>
     </span>
-    <p>Done by Shiv-Shakti Designs</p>
+    <p title="Designer's name">Done by Shiv-Shakti Designs</p>
   </body>
 </html>
