--- a/index.html
+++ b/index.html
@@ -78,6 +78,7 @@
         width="150px"
         height="150px"
         class="img-fluid logoSSB"
+        title="Branding"
       />
       <br />
       <h1>WELCOME TO SSB PHOTOGRAPHY <br />HOME PAGE</h1>
@@ -106,7 +107,7 @@
         /></a>
       </span>
 
-      <p>Done by Shiv-Shakti Designs</p>
+      <p title="Designer's name">Done by Shiv-Shakti Designs</p>
     </body>
   </head>
 </html>
