--- a/aboutUs.html
+++ b/aboutUs.html
@@ -80,6 +80,7 @@
       width="150px"
       height="150px"
       class="img-fluid logoSSB"
+      title="Branding"
     />
 
     <h1>About our history.</h1>
@@ -138,6 +139,6 @@
           class="img-fluid pageLink"
       /></a>
     </span>
-    <p>Done by Shiv-Shakti Designs</p>
+    <p title="Designer's name">Done by Shiv-Shakti Designs</p>
   </body>
 </html>
