Made the website SEO friendly

--- a/aboutUs.html
+++ b/aboutUs.html
@@ -111,6 +111,7 @@
       width="300px"
       height="400px"
       class="img-fluid founderPic"
+      title="Picture of the founder"
     />
 
     <h3 class="mt-1 text-center">Sushmitha S Budhayee (Sush)</h3>
