--- a/index.html
+++ b/index.html
@@ -87,6 +87,7 @@
         src="IMG_20170910_143715.jpg"
         alt="background Picture"
         class="img-fluid bgPic"
+        title="Image captured during a tour in Mauritius"
       />
       <br />
 
